syntax = "proto3";
package emortal.dev.api.messaging.friend;

option java_package = "dev.emortal.api.messaging.friend";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/grpc-api-specs/gen/go/messaging/friend";

// not implemented
message ProxyFriendRequestReceivedMessage {
  string sender_id = 1;
  string sender_username = 2;
  string recipient_id = 3;
}

// not implemented
message ProxyFriendAddedMessage {
  string sender_id = 1;
  string sender_username = 2;
  string recipient_id = 3;
}

// not implemented
message ProxyFriendRemovedMessage {
  string sender_id = 1;
  string recipient_id = 2;
}