syntax = "proto3";
package emortal.message;

option java_package = "dev.emortal.api.message.privatemessage";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/proto-specs/gen/go/message/privatemessage";

import "private_message/models.proto";

message PrivateMessageReceivedMessage {
  model.PrivateMessage private_message = 1;
}